Colaboratory를 통해 생성됨

--- a/02_codelab2_urllib.ipynb
+++ b/02_codelab2_urllib.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "06_codelab2_urllib.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "interpreter": {
@@ -28,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_codelab/blob/main/02_codelab2_urllib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shindahee10113/2021_codelab/blob/main/02_codelab2_urllib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -94,7 +93,7 @@
         "from urllib.request import Request, urlopen\n",
         "import json  "
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -112,21 +111,50 @@
         "id": "lWmOfcPfEkcG"
       },
       "source": [
-        "url =  \n",
+        "url = 'http://svc.saltlux.ai:31781'\n",
         "headers={\"Content-Type\":\"application/json\" } \n",
         "\n",
-        "apiKey =  \n",
-        "rqData = {\n",
-        "    \"key\": ,\n",
-        "    \"serviceId\": ,\n",
+        "apiKey = '86bbad49-de12-4e4a-93b6-09602d9ae7eb'\n",
+        "msg = '한국은 아름답습니다.'\n",
+        "rqData ={\n",
+        "    \"key\": apiKey,\n",
+        "    \"serviceId\": \"11987300804\",\n",
         "    \"argument\": {\n",
-        "        \"type\": ,\n",
-        "        \"query\": \n",
+        "        \"type\": \"1\",\n",
+        "        \"query\": msg\n",
         "    }\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3T3OOgTTwfjv",
+        "outputId": "8cdbe3ec-7992-4b89-c4c1-bf9d7f0067cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(rqData )"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -135,15 +163,13 @@
       },
       "source": [
         "# 요청 객체 생성\n",
-        " \n",
-        "\n",
+        "req = Request(url, headers=headers)\n",
         "# 전달 데이터 json 형태로 만들기\n",
-        " \n",
-        "\n",
+        "jdata = json.dumps(rqData).encode('utf-8')\n",
         "#요청\n",
-        " "
+        "respone = urlopen(req, jdata)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -153,24 +179,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5hd-rKdlB3om",
-        "outputId": "468a880b-1b63-4d6f-bfb8-ea56020eb392"
+        "outputId": "b17f04d7-c0c5-4340-8038-c4e271bb4530"
       },
       "source": [
-        "response "
+        "respone "
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<http.client.HTTPResponse at 0x7fcc1f9e6350>"
+              "<http.client.HTTPResponse at 0x7f3c769c5790>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 24
         }
       ]
     },
@@ -205,27 +231,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "s2Y8kzyvE4jk",
-        "outputId": "76d3eca9-0c30-40ae-dbcd-ccdcb3d4fd77"
+        "id": "s2Y8kzyvE4jk"
       },
       "source": [
         "# 요청에 대한 응답처리\n",
-        "  "
+        "  resp = respanse.read().decode('utf-8')\n",
+        "  print(resp)\n",
+        "  print{}"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "{\"query\": \"파이썬은 재미있어요.\", \"type\": \"감정분석\", \"Result\": [[0.9589413404464722, \"신뢰\"]]}\n",
-            "<class 'str'>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zLtMVIg522pY"
+      },
+      "source": [
+        "def aiData(msg) :\n",
+        "  url = url = 'http://svc.saltlux.ai:31781'\n",
+        "  headers={\"Content-Type\":\"application/json\" } \n",
+        "\n",
+        "  apiKey = '86bbad49-de12-4e4a-93b6-09602d9ae7eb'\n",
+        "\n",
+        "  rqData ={\n",
+        "      \"key\": apiKey,\n",
+        "      \"serviceId\": \"11987300804\",\n",
+        "      \"argument\": {\n",
+        "          \"type\": '1',\n",
+        "          \"query\": msg\n",
+        "      }\n",
+        "  }\n",
+        "  # 요청 객체 생성\n",
+        "  req = Request(url, headers=headers)\n",
+        "  # 전달 데이터 json 형태로 만들기\n",
+        "  jdata = json.dumps(rqData).encode('utf-8')\n",
+        "  #요청\n",
+        "  respone = urlopen(req, jdata)\n",
+        "  esp = respone.read().decode('utf-8')  \n",
+        "  return esp"
+      ],
+      "execution_count": 36,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -255,6 +302,181 @@
         "  ```\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RY2lT7Ok3906",
+        "outputId": "32588539-8ace-425d-f65a-513674ebf25b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "aiData('오늘은 맛있는 저녁을 먹었습니다.')"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'{\"query\": \"오늘은 맛있는 저녁을 먹었습니다.\", \"type\": \"감정분석\", \"Result\": [[0.7215429544448853, \"기쁨\"]]}'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6JkXIfsjEPZM"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DGmfW0LyAhqM",
+        "outputId": "b4c472d4-c019-4d2a-bd6d-118c8c9fc5dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
+      },
+      "source": [
+        "indata = input('감정 분석 문장을 입력하세요.')\n",
+        "aiData(indata)"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "감정 분석 문장을 입력하세요.배가 고파요\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'{\"query\": \"배가 고파요\", \"type\": \"감정분석\", \"Result\": [[0.332904189825058, \"혐오\"]]}'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mi86UtSGF5IA"
+      },
+      "source": [
+        "dtmsg = {'기쁨':'와우 기뻐요', \n",
+        "     '신뢰':'당신의 말에 신뢰합니다.', \n",
+        "     '공포':'무서워요', \n",
+        "     '놀라움':'헉!', \n",
+        "     '슬픔':'ㅠㅠ', \n",
+        "     '혐오':'혐오스러워요', \n",
+        "     '분노':'화나요', \n",
+        "     '기대':'기대되요'}"
+      ],
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sCwOco86BD4-",
+        "outputId": "0771e6e5-a306-4050-c059-aef01edcfb23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "while True:\n",
+        " indata = input('감정 분석 문장을 입력하세요.')\n",
+        "\n",
+        " if indata in ['그만', '종료'] : break\n",
+        "\n",
+        " r = json.loads(aiData(indata))\n",
+        " idx = r['Result'][0][1]\n",
+        " print(dtmsg[idx])"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "감정 분석 문장을 입력하세요.배가 고파요\n",
+            "혐오스러워요\n",
+            "감정 분석 문장을 입력하세요.그만\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TRVoLuTp4PsP",
+        "outputId": "cd648292-7536-4c50-d0be-f67950cdd497",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "indata = input('감정 분석 문장을 입력하세요.')\n",
+        "r = json.loads(aiData(indata))\n",
+        "print(r)\n",
+        "print(type(r))\n",
+        "idx = r['Result'][0][1]\n",
+        "print(r['Result'][0][1])"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "감정 분석 문장을 입력하세요.안녕하세요\n",
+            "{'query': '안녕하세요', 'type': '감정분석', 'Result': [[0.775528073310852, '신뢰']]}\n",
+            "<class 'dict'>\n",
+            "신뢰\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tzi0cr8p74Ua"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -326,6 +548,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4jcVb5HdAfSw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
